# MACHINE-LEARNING

./: .gitattributes
.devcontainer/: devcontainer.json
MODUL 1/DEMO/: MODUL 1_TUGAS.csv
MODUL 6/: .gitignore  pyproject.toml
MODUL 6/src/: app.py  nn_model.pkl  tfidf_genre.pkl  tfidf_title.pkl  titles_index.csv
MODUL 6/streamlit-app/: app.py
UAP/: .gitignore  README.md  pyproject.toml
UAP/streamlit-app/: app.py  requirements.txt  requirements_old.txt
